# northflow

./: .env.example  README.md  config.py  pyproject.toml  requirements.txt  run.py  tasks.py
app/: __init__.py
app/database/: schema.sql
app/models/: __init__.py  dal.py
app/routes/: __init__.py  main.py
app/static/css/: style.css
app/static/images/: .gitkeep
app/static/js/: main.js
app/templates/: base.html  index.html
src/: DAL.py  constants.py
tests/: __init__.py  test_connection.py
