[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "northflow"
version = "0.1.0"
description = "A mindfulness/gratitude check-in app"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Adam Lacasse"}
]
dependencies = [
    "Flask>=3.0.0",
    "Flask-SQLAlchemy>=3.0.0",
    "mysql-connector-python>=8.0.0",
    "python-dotenv>=1.0.0",
    "invoke>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "sqlfluff>=3.0.0",
    "djlint>=1.34.0",
    "pytest>=7.0.0",
]

test = [
    "pytest>=7.0.0",
]

[tool.setuptools]
packages = ["app", "app.models", "app.routes"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = []
